--- a/app/views/invite_mailer/new_user_invite.html.erb
+++ b/app/views/invite_mailer/new_user_invite.html.erb
@@ -1,1 +1,4 @@
-<h1>Hello!</h1>
+<h1>Some one has invited you to join their group!</h1>
+
+<p>Join by clicking the link below!</p>
+<%=link_to "join", new_user_registration_path(:invite_token => @invite.token)   %>
